Fix review search bug in dark mode

--- a/client/src/components/styles/DarkTheme.scss
+++ b/client/src/components/styles/DarkTheme.scss
@@ -24,6 +24,10 @@
   .rbt {
     .rbt-input-main {
       color: $light;
+
+      &:focus {
+        background-color: $dark;
+      }
     }
 
     .rbt-token {
